<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="kg.geektech.activities.MainActivity">


    <TextView
        android:id="@+id/quiz_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200sp"
        />

    <Button
        android:id="@+id/btn_add_fragment"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="200dp"
        android:background="@drawable/bg_button"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:background="@drawable/bg_button"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:layout_centerHorizontal="true"
        />

    <Switch
        android:id="@+id/switch_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Theme"
        android:textColor="@color/white"
        tools:ignore="UseSwitchCompatOrMaterialXml" />


</RelativeLayout>